monthly.log
monthly_report.py:13: LineBotSdkDeprecatedIn30: Call to deprecated class LineBotApi. (Use v3 class; linebot.v3.<feature>. See https://github.com/line/line-bot-sdk-python/blob/master/README.rst for more details.) -- Deprecated since version 3.0.0.
  line_bot_api = LineBotApi(os.getenv("LINE_CHANNEL_ACCESS_TOKEN"))
monthly_report.py:64: LineBotSdkDeprecatedIn30: Call to deprecated method push_message. (Use 'from linebot.v3.messaging import MessagingApi' and 'MessagingApi(...).push_message(...)' instead. See https://github.com/line/line-bot-sdk-python/blob/master/README.rst for more details.) -- Deprecated since version 3.0.0.
  line_bot_api.push_message(group_id, TextSendMessage(text=result_text))
️ スキップ: day 12 の列数が不一致（5列、想定は 7列）
️ スキップ: day 13 の列数が不一致（6列、想定は 7列）
️ スキップ: day 14 の列数が不一致（6列、想定は 7列）
 送信先: C1d9ed412f2141da57e47bd28cec532a4
 送信内容:
5月総計
ふじわら: 2083.33円
りょうや: 76.67円
ともや: 2153.33円
りょうた: 123.33円
イナウタ: 6.67円
シュウスケ: -903.33円
じおん: -3540.00円
 罰金結果をLINEに送信しました
Traceback (most recent call last):
  File "monthly_report.py", line 71, in <module>
    pass
OSError: [Errno 30] Read-only file system
monthly_report.py:13: LineBotSdkDeprecatedIn30: Call to deprecated class LineBotApi. (Use v3 class; linebot.v3.<feature>. See https://github.com/line/line-bot-sdk-python/blob/master/README.rst for more details.) -- Deprecated since version 3.0.0.
  line_bot_api = LineBotApi(os.getenv("LINE_CHANNEL_ACCESS_TOKEN"))
monthly_report.py:64: LineBotSdkDeprecatedIn30: Call to deprecated method push_message. (Use 'from linebot.v3.messaging import MessagingApi' and 'MessagingApi(...).push_message(...)' instead. See https://github.com/line/line-bot-sdk-python/blob/master/README.rst for more details.) -- Deprecated since version 3.0.0.
  line_bot_api.push_message(group_id, TextSendMessage(text=result_text))
 送信先: C1d9ed412f2141da57e47bd28cec532a4
 送信内容:
6月総計
ふじわら: 2056.67円
りょうや: -833.33円
ともや: 2056.67円
りょうた: -600.00円
イナウタ: 843.33円
シュウスケ: 276.67円
じおん: -3800.00円
 罰金結果をLINEに送信しました
️ 自動実行モード：daily.csv を初期化しました
monthly_report.py:13: LineBotSdkDeprecatedIn30: Call to deprecated class LineBotApi. (Use v3 class; linebot.v3.<feature>. See https://github.com/line/line-bot-sdk-python/blob/master/README.rst for more details.) -- Deprecated since version 3.0.0.
  line_bot_api = LineBotApi(os.getenv("LINE_CHANNEL_ACCESS_TOKEN"))
monthly_report.py:64: LineBotSdkDeprecatedIn30: Call to deprecated method push_message. (Use 'from linebot.v3.messaging import MessagingApi' and 'MessagingApi(...).push_message(...)' instead. See https://github.com/line/line-bot-sdk-python/blob/master/README.rst for more details.) -- Deprecated since version 3.0.0.
  line_bot_api.push_message(group_id, TextSendMessage(text=result_text))
 送信先: C1d9ed412f2141da57e47bd28cec532a4
 送信内容:
7月総計
ふじわら: 1886.67円
りょうや: 626.67円
ともや: 1886.67円
りょうた: 1186.67円
イナウタ: 276.67円
シュウスケ: -1263.33円
じおん: -4600.00円
 罰金結果をLINEに送信しました
️ 自動実行モード：daily.csv を初期化しました
  File "monthly_report.py", line 4
    <<<<<<< HEAD
    ^
SyntaxError: invalid syntax
monthly_report.py:13: LineBotSdkDeprecatedIn30: Call to deprecated class LineBotApi. (Use v3 class; linebot.v3.<feature>. See https://github.com/line/line-bot-sdk-python/blob/master/README.rst for more details.) -- Deprecated since version 3.0.0.
  line_bot_api = LineBotApi(os.getenv("LINE_CHANNEL_ACCESS_TOKEN"))
monthly_report.py:64: LineBotSdkDeprecatedIn30: Call to deprecated method push_message. (Use 'from linebot.v3.messaging import MessagingApi' and 'MessagingApi(...).push_message(...)' instead. See https://github.com/line/line-bot-sdk-python/blob/master/README.rst for more details.) -- Deprecated since version 3.0.0.
  line_bot_api.push_message(group_id, TextSendMessage(text=result_text))
️ スキップ: day 32 の列数が不一致（0列、想定は 7列）
 送信先: C1d9ed412f2141da57e47bd28cec532a4
 送信内容:
9月総計
ふじわら: -4466.67円
りょうや: -5896.67円
ともや: -4466.67円
りょうた: -5226.67円
イナウタ: -5096.67円
シュウスケ: -7000.00円
じおん: -7046.67円
 罰金結果をLINEに送信しました
️ 自動実行モード：daily.csv を初期化しました
monthly_report.py:13: LineBotSdkDeprecatedIn30: Call to deprecated class LineBotApi. (Use v3 class; linebot.v3.<feature>. See https://github.com/line/line-bot-sdk-python/blob/master/README.rst for more details.) -- Deprecated since version 3.0.0.
  line_bot_api = LineBotApi(os.getenv("LINE_CHANNEL_ACCESS_TOKEN"))
monthly_report.py:64: LineBotSdkDeprecatedIn30: Call to deprecated method push_message. (Use 'from linebot.v3.messaging import MessagingApi' and 'MessagingApi(...).push_message(...)' instead. See https://github.com/line/line-bot-sdk-python/blob/master/README.rst for more details.) -- Deprecated since version 3.0.0.
  line_bot_api.push_message(group_id, TextSendMessage(text=result_text))
️ スキップ: day 31 の列数が不一致（0列、想定は 7列）
 送信先: C1d9ed412f2141da57e47bd28cec532a4
 送信内容:
10月総計
ふじわら: -4756.67円
りょうや: -5873.33円
ともや: -4476.67円
りょうた: -5176.67円
イナウタ: -6270.00円
シュウスケ: -6360.00円
じおん: -7686.67円
 罰金結果をLINEに送信しました
️ 自動実行モード：daily.csv を初期化しました
